add readme and docker "
