# internal/app/handlers/timelines.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	"github.com/ibanezv/littletwitter/internal/timeline"
+	"github.com/ibanezv/littletwitter/internal/tweet"
 )
 
 type TimelineHandler struct {
@@ -16,6 +17,20 @@ func NewTimelineHandler(serv timeline.TimelineService) *TimelineHandler {
 	return &TimelineHandler{serv}
 }
 
+type responseTimeline struct {
+	UserId int64         `json:"user_id"`
+	Tweets []tweet.Tweet `json:"tweets"`
+}
+
+// @Summary     Get Timeline
+// @Description Get the timeline for a user
+// @ID          user_id
+// @Tags  	    timeline
+// @Accept      json
+// @Produce     json
+// @Success     200 {object} timeline.TimelineUser
+// @Failure     500 {object} response
+// @Router      /Timeline/user_id [get]
 func (h *TimelineHandler) GetTimeline(ctx *gin.Context) {
 	pUserId, exists := ctx.Params.Get("userId")
 	if !exists {
